--- a/.env.example
+++ b/.env.example
@@ -52,4 +52,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 WEATHER_BASE_URL=api.openweathermap.org/data/2.5/
-WEATHER_KAY=601fec9b7e6fb23f37cf137c2965f333
+WEATHER_KAY=yourApiKey
